# onedex-defi-SC

./: .gitignore  Cargo.toml
onedex-sc/: Cargo.toml  upgrade.json
onedex-sc/interaction/: devnet.snippets.sh  mainnet.snippets.sh
onedex-sc/meta/: Cargo.toml
onedex-sc/meta/src/: main.rs
onedex-sc/src/: constants.rs  event.rs  lib.rs  state.rs  view.rs
onedex-sc/src/logic/: amm.rs  common.rs  liquidity.rs  pair.rs  swap.rs
onedex-sc/src/storage/: common_storage.rs  pair_storage.rs
onedex-sc/tests/: constant.rs  test.rs
onedex-sc/tests/contract_interactions/: common.rs  liquidity_test.rs  mod.rs  pair_test.rs  swap_test.rs
onedex-sc/tests/contract_setup/: mod.rs
onedex-sc/wasm/: Cargo.toml
onedex-sc/wasm/src/: lib.rs
wegld-swap/: Cargo.toml
wegld-swap/meta/: Cargo.toml
wegld-swap/wasm/: Cargo.toml
